--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue": "^3.2.45",
     "vue-google-login": "^2.0.5",
     "vue-router": "^4.1.6",
+    "vue3-quill": "^0.3.0",
     "vue3-touch-events": "^4.1.0",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2"
