Fixed imports of global cmps, added prettier settings from og project, and removed old vue-google-login packge from packge.json

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,11 @@
-{}
+{
+  "proseWrap": "always",
+  "singleQuote": true,
+  "arrowParens": "always",
+  "trailingComma": "all",
+  "printWidth": 120,
+  "tabWidth": 2,
+  "semi": false,
+  "wrapAttributes": false,
+  "bracketSpacing": false
+}
