added end of line settings to prettier

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,6 @@
   "tabWidth": 2,
   "semi": false,
   "wrapAttributes": false,
-  "bracketSpacing": false
+  "bracketSpacing": false,
+  "endOfLine": "lf"
 }
