--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios-retry": "^3.4.0",
     "caniuse-lite": "^1.0.30001450",
     "detect-browser": "^5.3.0",
+    "lodash.clonedeep": "^4.5.0",
+
     "face-api.js": "^0.20.0",
     "file-saver": "^2.0.5",
     "lodash.isequal": "^4.5.0",
