--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "axios-retry": "^3.4.0",
     "caniuse-lite": "^1.0.30001450",
     "detect-browser": "^5.3.0",
-    "lodash.clonedeep": "^4.5.0",
-
     "face-api.js": "^0.20.0",
     "file-saver": "^2.0.5",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
+    "material-icons": "^1.13.1",
     "register-service-worker": "^1.7.2",
     "sass": "^1.58.0",
     "socket.io-client": "^4.6.0",
