--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash.isequal": "^4.5.0",
     "material-icons": "^1.13.1",
     "register-service-worker": "^1.7.2",
+    "quill": "^1.3.7",
     "sass": "^1.58.0",
     "socket.io-client": "^4.6.0",
     "uuid": "^9.0.0",
