fixed up google login, moved client id to vite env, fixed auto-login in router

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VUE_APP_UNSPLASH_KEY=jbK5lX_Het08WRG6VGyvCky3Fx3idgVfhpmnIpfELYE
+VITE_GOOGLE_LOGIN_CLIENT_ID=459352034354-5afbe95ab9e5ffu3dg5s974qm1qf0aia.apps.googleusercontent.com
