--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@uppy/aws-s3": "^1.7.3",
-    "@uppy/aws-s3-multipart": "^1.8.13",
-    "@uppy/core": "^1.14.2",
-    "@uppy/drag-drop": "^1.4.29",
+    "@uppy/aws-s3": "^3.0.5",
+    "@uppy/aws-s3-multipart": "^3.1.2",
+    "@uppy/core": "^3.1.1",
+    "@uppy/drag-drop": "^3.0.1",
     "axios": "^1.3.2",
     "axios-retry": "^3.4.0",
     "caniuse-lite": "^1.0.30001450",
     "detect-browser": "^5.3.0",
-    "face-api.js": "^0.20.0",
+    "face-api.js": "^0.22.2",
     "file-saver": "^2.0.5",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "material-icons": "^1.13.1",
-    "register-service-worker": "^1.7.2",
     "quill": "^1.3.7",
+    "register-service-worker": "^1.7.2",
     "sass": "^1.58.0",
     "socket.io-client": "^4.6.0",
     "uuid": "^9.0.0",
@@ -32,8 +32,8 @@
     "vue-hotjar-next": "^1.4.0",
     "vue-router": "^4.1.6",
     "vue-social-sharing": "^4.0.0-alpha4",
+    "vue3-google-login": "^2.0.15",
     "vue3-observe-visibility": "^0.1.2",
-    "vue3-quill": "^0.3.0",
     "vue3-touch-events": "^4.1.0",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2"
