--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "uuid": "^9.0.0",
     "vue": "^3.2.45",
     "vue-hotjar-next": "^1.4.0",
+    "vue-meta": "^3.0.0-alpha.10",
     "vue-router": "^4.1.6",
     "vue-social-sharing": "^4.0.0-alpha4",
     "vue3-google-login": "^2.0.15",
