--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/ --ignore-path .gitignore"
+    "format": "prettier --write src/ --ignore-path .gitignore",
+    "lint-format": "npm run lint && npm run format"
   },
   "dependencies": {
     "@uppy/aws-s3": "^3.0.6",
