--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
+    "lodash.clonedeep": "^4.5.0",
     "prettier": "^2.7.1",
     "vite": "^4.0.0",
     "vitest": "^0.30.1"
