chore: :construction_worker: updated scripts to include a staging specific one

--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,6 @@
 NODE_ENV=production
-VUE_APP_ENV=staging
+VITE_APP_ENV=staging
+
+# TODO: Check if these keys need to be changed, they are the same as in .env
+VITE_APP_UNSPLASH_KEY=jbK5lX_Het08WRG6VGyvCky3Fx3idgVfhpmnIpfELYE
+VITE_GOOGLE_LOGIN_CLIENT_ID=459352034354-5afbe95ab9e5ffu3dg5s974qm1qf0aia.apps.googleusercontent.com
