ci(github-actions): adjusted the lint & formatting actions
switched the lint action to work with our own script, added lint
and format scripts that check files without changing them while throwing errors

--- a/.github/workflows/lint-format.yml
+++ b/.github/workflows/lint-format.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Lint & Format
 
 on:
   # Trigger the workflow on push or pull request,
@@ -29,7 +29,4 @@ jobs:
         run: npm ci
 
       - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          prettier: true
+        run: npm run check-lint-format
