--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --no-fix --max-warnings 0 --ignore-path .gitignore",
     "format": "prettier --write src/ --ignore-path .gitignore",
-    "lint-format": "npm run lint && npm run format"
+    "format:check": "prettier --check src/ --ignore-path .gitignore",
+    "lint-format": "npm run lint && npm run format",
+    "check-lint-format": "npm run lint:check && npm run format:check"
   },
   "dependencies": {
     "@uppy/aws-s3": "^3.0.6",
